--- a/css/estilos.css
+++ b/css/estilos.css
@@ -379,6 +379,15 @@ footer .redes-sociales ul li a:hover::before{
 
 }
 
+.center {
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    font-size: 28px;
+    color:white
+  }
+
 
 
 
